FILE(GLOB BLAS_TEST *.cpp)

foreach(testFile ${BLAS_TEST})
  get_filename_component(testName ${testFile} NAME_WE)
  message(STATUS "Adding ${testName}")
  add_executable(${testName} ${testFile})
  set_property(TARGET ${testName}  PROPERTY CXX_STANDARD 11)
  message(STATUS "Test File " ${testFile})
  add_sycl_to_target(${testName} ${testFile} ${CMAKE_CURRENT_BINARY_DIR})
  add_test(${testName} ${testName})
endforeach()
