FILE(GLOB BLAS_TEST *.cpp)

foreach(testFile ${BLAS_TEST})
  get_filename_component(testName ${testFile} NAME_WE)
  message(STATUS "Adding ${testName}")

  if(${testName} MATCHES "clblas")
    if (USE_CLBLAS)
      include_directories(${CLBLAS_INCLUDE})
      add_executable(${testName} ${testFile})
      target_link_libraries(${testName} PUBLIC ${CLBLAS_LIBRARIES})
      set_property(TARGET ${testName} PROPERTY CXX_STANDARD 11)
      if (BLAS_FOUND)
        target_link_libraries(${testName} PUBLIC ${BLAS_LIBRARIES})
      endif()
    endif()
  else()
    add_executable(${testName} ${testFile})
    set_property(TARGET ${testName} PROPERTY CXX_STANDARD 11)
    if (BLAS_FOUND)
      target_link_libraries(${testName} PUBLIC ${BLAS_LIBRARIES})
    endif()
    message(STATUS "Test File " ${testFile})
    add_sycl_to_target(${testName} ${CMAKE_CURRENT_BINARY_DIR} ${testFile})
  endif()
endforeach()
